--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,33 @@
-<p>Welcome to my website!</p>
+
+<div class="container-fluid login-div">
+    <div class="row justify-content-center">
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+          <div class="card-body">
+            <h3 class="text-center">Giriş Yap</h3>
+            <form>
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">E-posta Adresi</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Şifre">
+                <label for="floatingPassword">Şifre</label>
+              </div>
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Beni hatırla
+                </label>
+              </div>
+              <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-block">Giriş</button>
+              </div>
+            </form>
+            <hr>
+            <p class="text-center">Hesabınız yok mu? <a href="#">Kayıt Olun</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
