--- a/src/app/communication/communication.component.html
+++ b/src/app/communication/communication.component.html
@@ -1,29 +1,44 @@
 <div class="container-fluid main">
-    <div class="row">
-        <div class="col-3">
-        </div>
-        <div class="col-6">
-            <label class="form-label" for="textAreaExample">Mesaj Gönder</label>
-            <textarea class="form-control" id="textAreaExample" rows="8"></textarea>    
-        </div>
-        <div class="col-3">
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-3">
-        </div>
-        <div class="col-6">
-            <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4"></div>
-                <div class="col-4">
-                    <button type="button" class="btn btn-outline-danger">Gönder</button>
+    <form [formGroup]="communicationForm" (ngSubmit)="onSubmit()">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="form-group col-3">
+                <label class="form-label" for="name-surname">Ad - Soyad</label>
+                <input class="form-control name-surname-input" [ngClass]="{ 'is-invalid': submitted && f.namesurname.errors }" formControlName="namesurname" type="email" autocapitalize="word">
+                <div *ngIf="submitted && f.namesurname.errors" class="invalid-feedback">
+                    <div *ngIf="f.namesurname.errors.required">Bu alan boş bırakılamaz!</div>
                 </div>
             </div>
-
+            <div class="form-group col-3">
+                <label>Email</label>
+                <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                    <div *ngIf="f.email.errors.required">Bu alan boş bırakılamaz!</div>
+                    <div *ngIf="f.email.errors.email">Lütfen geçerli bir e-posta adresi giriniz!</div>
+                </div>
+            </div>
+            <div class="col-3"></div>
         </div>
-        <div class="col-3">
-        </div>
-    </div>
+        <div class="row">
+            <div class="col-3">
+            </div>
+            <div class="form-group col-6">
+                <label class="form-label" for="mail-text">Mesaj Gönder</label>
+                <textarea class="form-control" id="textAreaExample" rows="8" [ngClass]="{ 'is-invalid': submitted && f.message.errors }" formControlName="message"></textarea>    
+                <div *ngIf="submitted && f.message.errors" class="invalid-feedback">
+                    <div *ngIf="f.message.errors.required">Bu alan boş bırakılamaz!</div>
+                </div>
+            </div>
+            <div class="col-3">
+            </div>
+            <br>
+            <div class="col-7"></div>
+            <div class="col-2 form-group">
+                <br>
+                <button class="btn btn-outline-danger btn-block">Gönder</button>
+            </div>
+            <div class="col-3"></div>
+        </div>            
+        <br>
+    </form>
 </div>
