ISS #7 | Updates - Navbar Transition

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -48,6 +48,7 @@
   border-color:#3aafa9;
   border-radius: 10px;
   margin-right: 10px;
+  transition: background-color 0.5s ease
 }
 
 #navbar-menu:hover {
