--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,14 +34,25 @@
               <a class="dropdown-item" href="#"><img src=".\assets\images\languages-flag\de.svg" alt="Germany"> Deutsch</a>
             </div>
           </li>
-          <div class="nav-item instagram" id="instagram">
-            <a class="nav-link instagram-icon" href="#"><i class="fa-brands fa-instagram"></i></a>
-          </div>
-          <div class="nav-item youtube" id="youtube">
-            <a class="nav-link youtube-icon" href="#"><i class="fa-brands fa-youtube"></i></a>
-          </div>
-          <div class="nav-item linkedin" id="linkedin">
-            <a class="nav-link linkedin-icon" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+
+          <div class="social-media-navbar">
+            <div class="row">
+              <div class="col-4">
+                <div class="instagram social-icon" id="instagram">
+                  <a class="nav-link instagram-icon" href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="youtube social-icon" id="youtube">
+                  <a class="nav-link youtube-icon" href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="linkedin social-icon" id="linkedin">
+                  <a class="nav-link linkedin-icon" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         
