--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -61,75 +61,160 @@
   transition: background-color 0.5s ease
 }
 
-.linkedin {
-  background-color: #0a66c2;
-  border-width:2px;
-  border-style:solid;
-  border-color: #0a66c2;
-  border-radius: 10px;
-  margin-right: 5%;
-}
 
-.linkedin:hover {
-  background-color: #0a66c2;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-  border-width:2px;
-  border-style:solid;
-  border-color: #0a66c2;
-  border-radius: 10px;
-  margin-right: 5%;
-}
 
-// .linkedin-icon:hover {
-//   color: white
+// .linkedin {
+//   background-color: #0a66c2;
+//   border-width:2px;
+//   border-style:solid;
+//   border-color: #0a66c2;
+//   border-radius: 10px;
+//   margin-right: 5%;
+//   transition: background-color 0.5s ease
+
 // }
 
-.fa-linkedin-in {
-  font-weight: 400;
-  color: white;
-}
+// .linkedin:hover {
+//   background-color: #0a66c2;
+//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+//   border-width:2px;
+//   border-style:solid;
+//   border-color: #0a66c2;
+//   border-radius: 10px;
+//   margin-right: 5%;
+//   transition: background-color 0.5s ease
 
-.youtube {
-  background-color: #ff0000;
-  border-width:2px;
-  border-style:solid;
-  border-color: #ff0000;
-  border-radius: 10px;
-  margin-right: 5%;
-}
+// }
 
-.youtube:hover {
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-  margin-right: 5%;
-}
+// // .linkedin-icon:hover {
+// //   color: white
+// // }
 
-.fa-youtube {
-  font-weight: 400;
-  color: white;
-}
+// .fa-linkedin-in {
+//   font-weight: 400;
+//   color: white;
+//   transition: background-color 0.5s ease
 
-.instagram {
-  background: #d6249f;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-  border-width:2px;
-  border-style:solid;
-  border-color: #ff0000;
-  border-radius: 10px;
-  border-color: #0a66c2;
-  margin-right: 5%;
+// }
 
-}
+// .youtube {
+//   height: 60%;
+//   margin-top: 20%;
+//   margin-bottom: 20%;
+//   background-color: #ff0000;
+//   border-style:solid;
+//   border-color: #ff0000;
+//   border-radius: 10px;
+//   transition: background-color 0.5s ease;
+//   margin-right: 5%;
 
-.instagram:hover {
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-  margin-right: 5%;
-}
+// }
 
-.fa-instagram {
-  font-weight: 400;
-  color: white;
-}
+// .youtube:hover {
+//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+//   transition: background-color 0.5s ease
+
+// }
+
+// .fa-youtube {
+//   font-weight: 400;
+//   padding-top: 30%;
+//   padding-bottom: 30%;
+//   color: white;
+//   transition: background-color 0.5s ease
+
+// }
+
+// .instagram {
+//   background: #d6249f;
+//   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+//   border-width:2px;
+//   border-style:solid;
+//   border-color: #ff0000;
+//   border-radius: 10px;
+//   border-color: #0a66c2;
+//   margin-right: 5%;
+//   transition: background-color 1s ease
+
+
+// }
+
+// .instagram:hover {
+//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+//   margin-right: 5%;
+//   transition: background-color 1s ease
+
+// }
+
+// .fa-instagram {
+//   font-weight: 400;
+//   color: white;
+//   transition: background-color 1s ease
+
+// }
 
 ::ng-deep .dropdown-toggle{
   color: white !important;
+}
+
+.instagram {
+
+}
+
+
+
+.social-icon {
+  position: relative;
+}
+
+.social-icon:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.instagram::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #d6249f;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out;
+}
+
+.youtube::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ff0000;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out;
+}
+
+.linkedin::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #0a66c2;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out;
+}
+
+// .fa-linkedin-in:hover{
+//   color: #0a66c2;
+// }
+
+.linkedin:hover + .fa-linkedin-in{
+  color: #0a66c2;
 }
