--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -3,7 +3,7 @@
         <div class="col-4"></div>
         <div class="col-4">
             <div class="input-group mb-3">
-                <input type="search" class="form-control" [(ngModel)]="searchText" (ngModelChange)="onSearch()" placeholder="Search">
+                <input type="search" class="form-control" [(ngModel)]="searchText" (ngModelChange)="onSearch()" placeholder="Search by Title">
                 <!-- <button class="btn search-button" type="submit"><i class="fas fa-search"></i> -->
                 <button type="button" class="btn btn-outline-danger"><i class="fas fa-search"></i></button>
             </div>
@@ -18,7 +18,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="row">
-                    <div class="col-sm-6 col-lg-4 mb-4" *ngFor="let blog of blogs">
+                    <div class="col-sm-6 col-lg-4 mb-4" *ngFor="let blog of filteredBlogs">
                         <div class="card rounded-4 shadow-2-strong card-blog custom-card">
                             <div class="card-body">
                                 <div class="d-inline-flex p-2 bd-highlight rounded-pill topic-text">#{{blog.topic}}</div>
