--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,61 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-light navbar-expand-md bg-navbar justify-content-center my-navbar">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src=".\assets\images\amfy-logo-green.png" alt="Logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active" id="navbar-menu">
-            <a class="nav-link" (click)="navigateToPage('home')">Anasayfa</a>
-          </li>
-          <li class="nav-item" id="navbar-menu">
-            <a class="nav-link" (click)="navigateToPage('resume')">Özgeçmişim</a>
-          </li>
-          <li class="nav-item" id="navbar-menu">
-            <a class="nav-link" (click)="navigateToPage('projects')">Projeler</a>
-          </li>
-          <li class="nav-item" id="navbar-menu">
-            <a class="nav-link" (click)="navigateToPage('blogs')">Bloglar</a>
-          </li>
-          <li class="nav-item" id="navbar-menu">
-            <a class="nav-link" (click)="navigateToPage('communication')">İletişim</a>
-          </li>
-        </ul>
-        <div class="navbar-nav">
-          <li class="nav-item dropdown" id="navbar-menu">
-            <a class="nav-link" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Language</a>
-            <div class="dropdown-menu" aria-labelledby="languageDropdown">
-              <a class="dropdown-item" href="#"><img src=".\assets\images\languages-flag\tr.svg" alt="Turkey"> Türkçe</a>
-              <a class="dropdown-item" href="#"><img src=".\assets\images\languages-flag\gb-eng.svg" alt="United Kingdom"> English</a>
-              <a class="dropdown-item" href="#"><img src=".\assets\images\languages-flag\de.svg" alt="Germany"> Deutsch</a>
-            </div>
-          </li>
-
-          <div class="social-media-navbar">
-            <div class="row">
-              <div class="col-4">
-                <div class="instagram social-icon" id="instagram">
-                  <a class="nav-link instagram-icon" href="#"><i class="fa-brands fa-instagram"></i></a>
-                </div>
-              </div>
-              <div class="col-4">
-                <div class="youtube social-icon" id="youtube">
-                  <a class="nav-link youtube-icon" href="#"><i class="fa-brands fa-youtube"></i></a>
-                </div>
-              </div>
-              <div class="col-4">
-                <div class="linkedin social-icon" id="linkedin">
-                  <a class="nav-link linkedin-icon" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
+        <a href="/" class="navbar-brand d-flex w-50 me-auto logo text" style="color: #fac800;">Amfy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar3">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+            <ul class="navbar-nav w-100 justify-content-center">
+                <li class="nav-item active">
+                  <a class="nav-link transition text" (click)="navigateToPage('home')">Anasayfa</a>
+                </li>
+                <li></li>
+                <li class="nav-item">
+                  <a class="nav-link transition text" (click)="navigateToPage('resume')">Özgeçmişim</a>
+                </li>
+                <li></li>
+                <li class="nav-item">
+                  <a class="nav-link transition text" (click)="navigateToPage('projects')">Projeler</a>
+                </li>
+                <li></li>
+                <li class="nav-item">
+                  <a class="nav-link transition text" (click)="navigateToPage('blogs')">Bloglar</a>
+                </li>
+                <li></li>
+                <li class="nav-item">
+                  <a class="nav-link transition text" (click)="navigateToPage('communication')">İletişim</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
+                <!-- <li class="nav-item social-media-icon-bg">
+                  <a class="nav-link instagram-icon rounded-3" target="_blank" href="https://www.instagram.com/samet.ocsy/"><i class="fa-brands fa-instagram"></i></a>
+                </li> -->
+                <li class="nav-item social-media-icon-bg">
+                  <a class="nav-link youtube-icon rounded-3 transition" target="_blank" href="https://www.youtube.com/@sametocsy"><i class="fa-brands fa-youtube"></i></a>
+                </li>
+                <li class="nav-item social-media-icon-bg">
+                  <a class="nav-link linkedin-icon rounded-3 transition" target="_blank"href="https://www.linkedin.com/in/sametocsoy/"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
+                <li class="nav-item dropdown" id="navbar-menu">
+                  <a class="nav-link transition text" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dil <i class="fa fa-thin fa-caret-down"></i></a>
+                  <div class="dropdown-menu" aria-labelledby="languageDropdown">
+                    <a class="dropdown-item"><img src=".\assets\images\languages-flag\tr.svg" alt="Turkey"> Türkçe</a>
+                    <a class="dropdown-item"><img src=".\assets\images\languages-flag\gb-eng.svg" alt="United Kingdom"> English</a>
+                    <a class="dropdown-item"><img src=".\assets\images\languages-flag\de.svg" alt="Germany"> Deutsch</a>
+                  </div>
+                </li>
+            </ul>
         </div>
-        
-      </div>
     </div>
-  </nav>
+</nav>
