--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,110 @@
-<p style="margin-top: 40%;">projects works!</p>
+<div class="container-fluid" style="margin-top: 10%;">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10 table-responsive">
+            <table class="table caption-top table-borderless">
+
+                <thead>
+                    <tr>
+                        <th scope="col" style="width: 20%;">Title</th>
+                        <th scope="col" style="width: 30%;">Detail</th>
+                        <th scope="col" style="width: 15%;">Topic</th>
+                        <th scope="col" style="width: 15%;">Subtopic</th>
+                        <th scope="col" style="width: 10%; text-align: center;">Year</th>
+                        <th scope="col" style="width: 10%; text-align: center;">Try it</th>
+                    </tr>
+                </thead>
+                <tbody *ngFor="let project of projects">
+                    <tr>
+                        <td scope="col" style="width: 20%;">{{project.title}}</td>
+                        <td scope="col" style="width: 30%;">{{project.detail}}</td>
+                        <td scope="col" style="width: 15%;">{{project.topic}}</td>
+                        <td scope="col" style="width: 15%;">{{project.subtopic}}</td>
+                        <td scope="col" style="width: 10%; text-align: center;">{{project.year}}</td>
+                        <td scope="col" style="width: 10%; text-align: center;"><i
+                                class="fa fa-light fa-hand-pointer fa-xl try-it" data-bs-toggle="modal"
+                                data-bs-target="#addChatAppModal"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-1"></div>
+
+    </div>
+</div>
+
+<!-- Try it Modal -->
+<div class="modal fade" id="addChatAppModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-4">
+                        <button type="button" class="btn btn-outline-light text-dark"><h5><i class="fa fa-user fa-xs"></i> Samet Öçsoy</h5></button>
+                    </div>
+                    <div [ngClass]="{'newClass': !isClassActive}" class="col-6">
+                        <input type="search" class="form-control" placeholder="Search">
+                    </div>
+                    <div class="col-1 chat-modal-icons  rounded-3" (click)="changeInputVisible()">
+                        <button type="button" class="btn btn-outline-light text-dark"><i
+                            class="fa fa-search"></i></button>
+                    </div>
+                    <div class="col-1 chat-modal-icons rounded-3" data-bs-dismiss="modal">
+                        <button type="button" class="btn btn-outline-light text-dark"><i
+                            class="fa fa-solid fa-xmark" data-bs-dismiss="modal"></i></button>
+                    </div>
+                
+
+                </div>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body modal-body-chat" style="overflow-y: scroll; overflow-x: none; max-height: 70vh;"
+                #modalBody>
+                <div class="row" *ngFor="let message of messages">
+                    <div class="col-12"><br></div>
+                    <div class="col-12">
+
+                        <div class="col-6 card message" style="float: left;" *ngIf="message.senderRole == 'user'">
+                            <div class="card-body">
+                                <p class="card-text" style="float: left; font-size: small;">{{message.content}}</p>
+                                <br>
+                                <p class="card-text" style="float: right; font-size: small;"><b>{{ message.hour }}</b> -
+                                    {{ message.date }}</p>
+                            </div>
+                        </div>
+
+                        <div class="col-6 card message" style="float: right; cursor: pointer;"
+                            *ngIf="message.senderRole == 'system'">
+                            <div class="card-body">
+                                <p class="card-text" style="float: right; font-size: small;">{{message.content}}</p>
+                                <br>
+                                <p class="card-text" style="float: left; font-size: small;"><b>{{ message.hour }}</b> -
+                                    {{ message.date }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12"><br></div>
+                </div>
+
+
+            </div>
+            <!-- Modal footer -->
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-11"
+                        style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <input type="search" class="form-control" (ngModel)="textMessageChat" placeholder="Send a Message">
+                    </div>
+                    <div class="col-1"
+                        style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <button type="button" class="btn btn-warning" (click)="sendMessage(textMessageChat)">Send</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
